# allocator

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  Citation.cff  README.md  README.rst  TODO  anaconda-project.yml  appveyor.yml  pyproject.toml  readthedocs.yml  requirements.txt  setup.py
.github/workflows/: ci.yml  docs.yml  python-app.yml  python-publish.yml
allocator/: __init__.py  algorithms.py  cluster_kahip.py  cluster_kmeans.py  cluster_kmeans.py.bak  compare_kahip_kmeans.py  distance_matrix.py  distance_matrix.py.bak  plotting.py  py.typed  shortest_path_gm.py  shortest_path_mst_tsp.py  shortest_path_mst_tsp.py.bak  shortest_path_ortools.py  shortest_path_osrm.py  sort_by_distance.py  utils.py  utils.py.bak  vulture_whitelist.py
allocator/api/: __init__.py  cluster.py  distance.py  itinerary.py  random_walk.py  route.py  types.py
allocator/cli/: __init__.py  cluster_cmd.py  itinerary_cmd.py  main.py  random_walk_cmd.py  route_cmd.py
allocator/core/: __init__.py  algorithms.py  itinerary.py  random_walk.py  routing.py
allocator/distances/: __init__.py  distance_matrix.py  euclidean.py  external_apis.py  factory.py  haversine.py
allocator/examples/: README.md  chonburi-buffon-shortest-ortools-tsp.csv  chonburi-buffoon-n50.csv  chonburi-buffoon-shortest-gm.csv  chonburi-buffoon-shortest-ortools-tsp.csv  chonburi-buffoon-shortest-osrm.csv  chonburi-roads-1k.csv  cli_examples.py  delhi-buffoon-n50.csv  delhi-buffoon-shortest-gm.csv  delhi-buffoon-shortest-ortools-tsp.csv  delhi-buffoon-shortest.csv  delhi-kmeans-n50.csv  delhi-kmeans-shortest-ortools-tsp.csv  delhi-kmeans-shortest.csv  delhi-roads-1k.csv  distance_methods.py  init-location.csv  mst-shortest-path-output.csv  quick_start.py  random-output-osrm.csv  shortest-path-ortools-output.csv  shortest-path-trip-output.csv
allocator/examples/KaHIP/: delhi-kaffpae-balance-edges-output.csv  delhi-kaffpae-without-balance-edges-output.csv  delhi-kahip-buffoon-output.csv
allocator/examples/OSRM-buffoon/: chonburi-osrm-1.html  chonburi-osrm-10.html  chonburi-osrm-11.html  chonburi-osrm-12.html  chonburi-osrm-13.html  chonburi-osrm-14.html  chonburi-osrm-15.html  chonburi-osrm-16.html  chonburi-osrm-17.html  chonburi-osrm-18.html  chonburi-osrm-19.html  chonburi-osrm-2.html  chonburi-osrm-20.html  chonburi-osrm-21.html  chonburi-osrm-22.html  chonburi-osrm-23.html  chonburi-osrm-24.html  chonburi-osrm-25.html  chonburi-osrm-26.html  chonburi-osrm-27.html  chonburi-osrm-28.html  chonburi-osrm-29.html  chonburi-osrm-3.html  chonburi-osrm-30.html  chonburi-osrm-31.html  chonburi-osrm-32.html  chonburi-osrm-33.html  chonburi-osrm-34.html  chonburi-osrm-35.html  chonburi-osrm-36.html  chonburi-osrm-37.html  chonburi-osrm-38.html  chonburi-osrm-39.html  chonburi-osrm-4.html  chonburi-osrm-40.html  chonburi-osrm-41.html  chonburi-osrm-42.html  chonburi-osrm-43.html  chonburi-osrm-44.html  chonburi-osrm-45.html  (+10 more)
allocator/examples/compare-kahip-kmeans/: compare-buffoon-kmean.csv  compare-kaffpae+balance-edges-kmean.csv  compare-kaffpae-kmean.csv
allocator/examples/kmeans/: cluster-kmeans-centroids-output.csv  cluster-kmeans-output.csv  delhi-kmeans-centroids.csv  delhi-kmeans-output.csv
allocator/examples/map/: ortools-osrm-1.html  ortools-osrm-10.html  ortools-osrm-11.html  ortools-osrm-12.html  ortools-osrm-13.html  ortools-osrm-14.html  ortools-osrm-15.html  ortools-osrm-16.html  ortools-osrm-17.html  ortools-osrm-18.html  ortools-osrm-19.html  ortools-osrm-2.html  ortools-osrm-20.html  ortools-osrm-21.html  ortools-osrm-22.html  ortools-osrm-23.html  ortools-osrm-24.html  ortools-osrm-25.html  ortools-osrm-26.html  ortools-osrm-27.html  ortools-osrm-28.html  ortools-osrm-29.html  ortools-osrm-3.html  ortools-osrm-30.html  ortools-osrm-31.html  ortools-osrm-32.html  ortools-osrm-33.html  ortools-osrm-34.html  ortools-osrm-35.html  ortools-osrm-36.html  ortools-osrm-37.html  ortools-osrm-38.html  ortools-osrm-39.html  ortools-osrm-4.html  ortools-osrm-40.html  ortools-osrm-5.html  ortools-osrm-6.html  ortools-osrm-7.html  ortools-osrm-8.html  ortools-osrm-9.html  (+40 more)
allocator/examples/sort-by-distance/: sort-by-distance-by-worker-output.csv  sort-by-distance-output.csv  worker-locations.csv
allocator/io/: __init__.py  data_handler.py
allocator/stats/: __init__.py  design_effect.py
allocator/tests/: __init__.py  chonburi-roads-50.csv  test_cluster_kahip.py  test_cluster_kahip.py.bak  test_haversine.py  test_kmeans.py  test_sort_by_distance.py
allocator/tests/api/: test_cluster_api.py  test_distance_api.py  test_route_api.py
allocator/tests/cli/: test_cli_commands.py
allocator/tests/distances/: test_distance_matrix.py
allocator/tests/io/: test_data_handler.py
allocator/viz/: __init__.py  plotting.py
benchmarks/: benchmark_jit.py
docs/: API_EXAMPLES.md  MIGRATION_GUIDE.md  Makefile  make.bat
docs/source/: allocator.rst  allocator.tests.rst  changelog.md  conf.py  contributing.md  index.md  index.rst  installation.md  kahip-vs-kmeans.rst  kahip.rst  kmeans.rst  modules.rst  mst.rst  mst_christofides.rst  quickstart.md  sort_by_distance.rst  tsp_google_directions.rst  tsp_ortools.rst  tsp_osrm.rst
docs/source/_static/: .gitkeep
docs/source/api/: assignment.md  clustering.md  distances.md  routing.md
docs/source/examples/: data.md  overview.md  scripts.md
examples/: README.md  README_WORKFLOWS.md  benchmark_itinerary_methods.py
examples/inputs/: README.md
examples/outputs/: latest.txt
examples/scripts/: README.md  algorithm_comparison.py  cli_examples.py  cli_workflow_demo.py  distance_methods.py  interactive_visualization_demo.py  quick_start.py  real_world_workflow.py
scripts/: generate_installation_docs.py
scripts/osrm/: docker-compose.yml  setup.sh
tests/: __init__.py
tests/api/: test_cluster_api.py  test_distance_api.py  test_itinerary_api.py  test_random_walk_api.py  test_route_api.py
tests/cli/: test_cli_commands.py
tests/distances/: test_distance_matrix.py
tests/io/: test_data_handler.py
tests/stats/: test_design_effect.py
(+54 files in other folders)
