[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "allocator"
dynamic = ["version"]
description = "Modern Python package for geographic task allocation, clustering, and routing optimization"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    {name = "Suriyan Laohaprapanon", email = "suriyant@gmail.com"},
    {name = "Gaurav Sood", email = "gsood07@gmail.com"},
]
maintainers = [
    {name = "Gaurav Sood", email = "gsood07@gmail.com"},
]
keywords = [
    "geographic", "allocation", "clustering", "routing", "optimization", 
    "tsp", "kmeans", "geospatial", "logistics", "shortest-path"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    # Core data processing
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    # JIT compilation for performance
    "numba>=0.58.0",
    # Machine learning algorithms
    "scikit-learn>=1.3.0",
    # Scientific computing (for simulation)
    "scipy>=1.10.0",
    # Distance calculations
    "utm>=0.7.0",
    "haversine>=2.8.0",
    # Graph operations
    "networkx>=3.0",
    # CLI interface
    "click>=8.0.0",
    "rich>=13.0.0",
    # HTTP requests (for OSRM)
    "requests>=2.28.0",
    # Google Maps API
    "googlemaps>=4.6.0",
    "google-maps-routing>=0.6.0",
    # Optimization algorithms
    "ortools>=9.5.0",
    # Visualization (basic)
    "matplotlib>=3.6.0",
    "seaborn>=0.13.2",
]

[project.optional-dependencies]
# Algorithm-specific dependencies
algorithms = [
    "Christofides>=1.0.0",
]
geo = [
    "folium>=0.14.0",           # Interactive maps
    "polyline>=2.0.0",          # Route encoding
]
# graph = [
#     "kahipwrapper>=0.1.0",      # KaHIP graph partitioning (if available)
# ]

# Development dependencies
dev = [
    "ruff>=0.1.0",              # Modern linting and formatting
    "mypy>=1.5.0",              # Type checking
    "black>=23.0.0",            # Code formatting
    "isort>=5.12.0",            # Import sorting
    "pre-commit>=3.0.0",        # Git hooks
]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.3.0",      # Parallel testing
    "coverage>=7.2.0",
    "hypothesis>=6.82.0",       # Property-based testing
]
docs = [
    "sphinx>=7.0.0",
    "furo>=2023.9.10",          # Modern Sphinx theme
    "myst-parser>=2.0.0",       # Markdown support
    "linkify-it-py>=2.0.0",     # Required for MyST linkify extension
    "sphinx-autodoc-typehints>=1.24.0",
    "sphinx-design>=0.5.0",     # Modern design components
]

# Convenience groups
all = [
    "allocator[algorithms,geo]",
]
complete = [
    "allocator[all,dev,test,docs]",
]

[project.urls]
Homepage = "https://github.com/geosensing/allocator"
Documentation = "https://geosensing.github.io/allocator/"
Repository = "https://github.com/geosensing/allocator.git"
"Bug Reports" = "https://github.com/geosensing/allocator/issues"
"Source Code" = "https://github.com/geosensing/allocator"
Changelog = "https://github.com/geosensing/allocator/blob/main/CHANGELOG.md"

[project.scripts]
allocator = "allocator.cli.main:cli"


[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]


[tool.coverage.run]
source = ["allocator"]
omit = ["*/tests/*", "*/test_*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

# Ruff configuration - Modern Python linter and formatter
[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = ["allocator/_version.py"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"allocator/__init__.py" = ["E402", "RUF022"]

[tool.ruff.lint.isort]
known-first-party = ["allocator"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# Black configuration
[tool.black]
line-length = 100
target-version = ['py311', 'py312', 'py313']
skip-string-normalization = false

# isort configuration  
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
known_first_party = ["allocator"]

# mypy configuration
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "utm.*",
    "haversine.*",
    "networkx.*",
    "matplotlib.*",
    "folium.*",
    "googlemaps.*",
    "google.maps.*",
    "ortools.*",
    "polyline.*",
    "sklearn.*",
    "scipy.*",
    "Christofides.*",
    "seaborn.*",
    "numba.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "allocator.vulture_whitelist"
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "allocator.distances.factory",
    "allocator.distances.euclidean",
    "allocator.distances.haversine",
    "allocator.core.routing",
    "allocator.core.itinerary",
    "allocator.api.*",
    "allocator.cli.*",
]
disallow_untyped_defs = false
disallow_untyped_decorators = false
warn_return_any = false
warn_unreachable = false
check_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = [
    "allocator.distances.external_apis",
    "allocator.viz.plotting",
]
ignore_errors = true

# Deptry configuration
[tool.deptry]
extend_exclude = ["tests/", "benchmarks/", "examples/"]
optional_dependencies_dev_groups = ["dev", "test", "docs"]

[tool.deptry.per_rule_ignores]
DEP001 = ["Christofides"]
DEP002 = ["Christofides", "seaborn", "allocator", "scipy"]

[tool.deptry.package_module_name_map]
Christofides = "christofides"
linkify-it-py = "linkify_it_py"

# Vulture configuration (dead code detection)
[tool.vulture]
min_confidence = 80
paths = ["allocator", "allocator/vulture_whitelist.py"]
exclude = ["tests/"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "allocator/_version.py"

[dependency-groups]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "ruff>=0.7.0", "mypy>=1.0", "deptry>=0.12.0", "vulture>=2.10"]
test = ["pytest>=7.0", "pytest-cov>=4.0"]